run prettier, fix prettier steps

--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -16,4 +16,4 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Prettier
-        run: prettier --write src/
+        run: yarn run prettier
